Kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: netflix-app
  namespace: rj-netflix
  labels:
    app: netflix-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: netflix-app
